force-app/main/default/objects/Rpl_Interview__c/Rpl_Interview__c.object-meta.xml
<CustomObject>
    <label>Recruitment Stage</label>
    <nameField>
        <label>Recruitment Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>