force-app/main/default/objects/Rpl_Interview__c/fields/Placement_Drive__c.field-meta.xml
<CustomField>
    <fullName>Placement_Drive__c</fullName>
    <label>Placement Drive ID</label>
    <referenceTo>Rpl_Placement_Drive__c</referenceTo>
    <relationshipLabel>Recruitment Stages</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>