force-app/main/default/objects/Rpl_Interview__c/fields/Rpl_Interview_Time__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Interview_Time__c</fullName>
    <label>Interview Time</label>
    <type>DateTime</type>
</CustomField>