force-app/main/default/objects/Rpl_Interview__c/fields/Rpl_Is_Final_Round__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Final_Round__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Final Round</label>
    <type>Checkbox</type>
</CustomField>