force-app/main/default/objects/Rpl_Interview__c/fields/Rpl_Is_Result_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Result_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox indicates whether the results for this stage have been uploaded or not.</inlineHelpText>
    <label>Is Result Uploaded</label>
    <type>Checkbox</type>
</CustomField>