force-app/main/default/objects/Rpl_Interview__c/fields/Rpl_Pull_Prev_Round_Shortlisted_Students__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Pull_Prev_Round_Shortlisted_Students__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By checking this checkbox, previous round shortlisted students will receive notifications about their shortlist, and they will be automatically moved to this round.</inlineHelpText>
    <label>Pull Prev Round Shortlisted Students</label>
    <type>Checkbox</type>
</CustomField>