force-app/main/default/objects/Rpl_Interview__c/fields/Rpl_Round_Number__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Round_Number__c</fullName>
    <inlineHelpText>Please enter only numeric values to indicate the order of the interview rounds (e.g., 1, 2, 3, 4).</inlineHelpText>
    <label>Round Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>