force-app/main/default/objects/Rpl_Interview__c/validationRules/Rpl_Interview_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Rpl_Interview_Date_Validation</fullName>
    <active>false</active>
    <description>Interview date should not be in past.</description>
    <errorConditionFormula>IF( Rpl_Interview_Time__c &lt; NOW(), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Rpl_Interview_Time__c</errorDisplayField>
    <errorMessage>Interview time should not be in past.</errorMessage>
</ValidationRule>