force-app/main/default/objects/Rpl_Interview__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Placement_Drive__c</columns>
    <columns>Rpl_Round_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>